--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "vite",
     "start:test": "vite build --mode test && vite preview --port 8080",
     "build": "vite build",
+    "start:prod": "vite preview --port 8080 --host",
     "test": "TZ=UTC LC_ALL=en_US.UTF-8 vitest run",
     "test-watch": "TZ=UTC LC_ALL=en_US.UTF-8 vitest",
     "test-coverage": "TZ=UTC LC_ALL=en_US.UTF-8 vitest run --coverage",
@@ -27,7 +28,7 @@
     "lint:eslint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
     "lint:prettier": "prettier --check \"{**/*,*}.{js,ts,jsx,tsx}\"",
     "lint:ts": "tsc --pretty --noEmit -p .",
-    "lint:stylelint": "stylelint '**/*.{css,scss}'",
+    "lint:stylelint": "stylelint \"**/*.{css,scss}\"",
     "commit-msg": "commitlint --edit $1",
     "codecept:mobile": "cd test-e2e && rm -rf \"./output/mobile\" && codeceptjs --config ./codecept.mobile.js run-workers --suites ${WORKER_COUNT:=8} ",
     "codecept:desktop": "cd test-e2e && rm -rf \"./output/desktop\" && codeceptjs --config ./codecept.desktop.js run-workers --suites ${WORKER_COUNT:=8} ",
